# compacs-ai-engine

./: .dockerignore  .env.clickhouse.example  .env.rag.docker.example  .env.rag.example  .gitignore  AGENTS_PYTHON.md  Dockerfile  README.md  answer_and_audit.py  app.py  bash.exe.stackdump  build_graph_dataset.py  check_table.py  clean_all.py  clickhouse-mcp-compose.yml  compare_results.py  config.py  docker-compose.yml  export_hybrid_comparison_xlsx.py  full_evaluation.py  gunicorn.conf.py  hypothesis_loader.py  langfuse-compose.yml  librechat-compose.yml  librechat.example.env  librechat.yaml  llm_evaluate.py  llm_evaluate_percent.py  load_graph_chunks.py  only_chunking_only_generation.py  pyproject.toml  rag-compose.host-ollama.yml  rag-compose.yml  rag_service.py  rag_system_alternative.py  rag_with_gpt.py  requirements.txt  run.py  run_10_questions.py  run_gpt_questions.py  (+3 more)
api/: __init__.py  collections.py  dev.py  gateway.py  jobs.py  openai_compat.py  sources.py  sse.py  stable.py
baseline/: build_comparison_xlsx.py  golden_set.json  llm_judge_runner.py  rag_answers_gpu.json  (+1 more)
clickhouse-bot-develop/: .env.example  .gitignore  README.md  answer_and_audit.py  app.py  build_graph_dataset.py  check_table.py  clean_all.py  compare_results.py  config.py  full_evaluation.py  hypothesis_loader.py  llm_evaluate.py  llm_evaluate_percent.py  load_graph_chunks.py  pyproject.toml  requirements.txt  run.py  run_10_questions.py  run_gpt_questions.py  train_on_answers.py
clickhouse-bot-develop/core/: __init__.py  database.py  document_processor.py  embeddings.py  ingestion.py  logger.py  openai_client.py  pdf_processor.py  preprocess_client.py  preprocess_server.py  preprocessing.py  reranker.py  token_counter.py
clickhouse-bot-develop/evaluator/: __init__.py  folder_scanner.py  qa_loader.py  results.py
clickhouse-bot-develop/prompts/: rag_api_en.txt  rag_api_parameters_list_en.txt
clickhouse-bot-develop/rag_engine/: engine.py
clickhouse-bot-develop/router/: __init__.py  smart_router.py
clickhouse-bot-develop/tests/: conftest.py  test_compare_results.py  test_full_evaluation.py  test_ingestion.py  test_judge.py  test_logger.py  test_openai_client.py  test_preprocessing.py  test_qa_loader.py
(+118 files in other folders)
