[project]
name = "rag-system"
version = "0.1.0"
description = "Unified RAG system with hybrid storage and LLM fallback"
requires-python = ">=3.10"
dependencies = [
    "clickhouse-connect>=0.7.0",
    "fastapi>=0.104.0",
    "numpy>=1.24.0",
    "ollama>=0.3.0",
    "openai>=1.30.0",
    "pandas>=2.2.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.0",
    "typer>=0.9.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "gunicorn>=22.0.0",
]

[project.scripts]
app = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "rag_engine", "router", "evaluator", "api"]

[tool.hatch.build.targets.wheel.force-include]
"rag_service.py" = "rag_service.py"
"app.py" = "app.py"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "data", "instructions"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["data/"]

[project.optional-dependencies]
prod = [
    "gunicorn>=22.0.0",
]
dev = [
    "mypy>=1.20.2",
    "pandas-stubs>=2.2.0",
    "pytest>=8.4.2",
    "ruff>=0.15.12",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pandas-stubs>=2.2.0",
    "pytest>=8.4.2",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
