[project]
name = "rag-system"
version = "2.0.0"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30.0",
    "pypdf>=4.0.0",
    "pandas>=2.2.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "doc-2.0-sources"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["doc-2.0-sources/"]

[tool.isort]
profile = "black"
line_length = 100

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pandas-stubs>=2.2.0",
    "pytest>=8.4.2",
    "ruff>=0.15.12",
]
